--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffffff;
+    --background: rgb(185, 185, 185);
     --foreground: #ededed;
   }
 }
