fix: Corrigido problema no posicionamento do loading inicial

--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: rgb(182, 34, 110);
+    --background: gray (182, 34, 110);
     --foreground: #ededed;
   }
 }
